Login,Sign-ul with mocks

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,3 +1,6 @@
-<h3>{{title}}</h3>
-<p data-ng-bind="message"></p>
-
+<div class="page-header">
+    <h3>{{title}}</h3>
+</div>
+<div>
+<p ng-show="user!=undefined"><strong>Welcome {{user.username}} !</strong></p>
+</div>
