--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -1,8 +1,34 @@
-<div class="row-fluid">
-    <div class="span6">
-         Username
+
+<div>
+    <div class="page-header" style="text-align: center">
+        <h3>{{ 'LOGIN' | i18n}}</h3>
     </div>
-    <div class="span6">
-        <input type="text" name="username" id="username" />
+    <div ng-show="showNotification" class="alert alert-{{notification.status}}" id="authErr">
+        <a title="Bootstrap Themes Generator" class="close" href="" ng-click="hideNotification()">×</a>
+        <h4 class="alert-heading">{{ 'NOTIFICATION' | i18n }}</h4>
+        <p>{{notification.message | i18n }}</p>
     </div>
+    <form id="myForm"  data-ng-submit="login()" class="form-horizontal">
+        <div class="control-group">
+            <label for="username" class="control-label">{{ 'EMAIL' | i18n }}</label>
+            <div class="controls">
+                <input id="username" data-ng-model="credentials.username" type="text" />
+            </div>
+        </div>
+        <div class="control-group">
+            <label for="password" class="control-label">{{ 'PASSWORD' | i18n }}</label>
+            <div class="controls">
+                <input id="password" data-ng-model="credentials.password" type="password" />
+            </div>
+        </div>
+        <div class="control-group">
+            <label class="control-label" for="link">{{ 'NOACCOUNT' | i18n }}</label>
+            <div class="controls">
+                <a href="" ng-click="setRoute('signup')" id="link">{{ 'CREATEACCOUNT' | i18n }}</a>
+            </div>
+        </div>
+        <div class="form-actions">
+            <button type="submit" class="btn btn-primary">{{ 'LOGIN' | i18n }}</button>
+        </div>
+    </form>
 </div>
